--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
             <input id="day-end"  class="text-fill-input" type="time" />
         </div>
         <div id="compose-track" onclick="world = new World()">Рассчитать маршрут</div>
+        <div id="review-button" onclick="window.open('https://goo.gl/forms/heJThD4a7iAIsxhK2')">Оставить отзыв</div>
     </section>
 </div>
 <div id="google-map"></div>
